src/test/compile-fail/binop-bitxor-str.rs
// error-pattern:^ cannot be applied to type `istr`

fn main() { let x = "a" ^ "b"; }
